{
  "version": 4,
  "terraform_version": "1.6.5",
  "serial": 250,
  "lineage": "5db22a9d-9fd8-b4a4-7fd1-665c10eaeca2",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/491e1121-c626-46e3-98ba-98f9f0434964/resourceGroups/8pmbatch-RG/providers/Microsoft.Network/networkInterfaces/myNIC1-0",
            "internal_domain_name_suffix": "4t3habwrtitejjh10rwysz5kfh.ix.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "myNIC-0-config",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/491e1121-c626-46e3-98ba-98f9f0434964/resourceGroups/8pmbatch-RG/providers/Microsoft.Network/publicIPAddresses/0-pip",
                "subnet_id": "/subscriptions/491e1121-c626-46e3-98ba-98f9f0434964/resourceGroups/8pmbatch-RG/providers/Microsoft.Network/virtualNetworks/myVnet/subnets/mySubnet"
              }
            ],
            "location": "southeastasia",
            "name": "myNIC1-0",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "8pmbatch-RG"
          },
          "dependencies": [
            "azurerm_public_ip.pip",
            "azurerm_subnet.example",
            "azurerm_virtual_network.example",
            "data.azurerm_resource_group.example"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/491e1121-c626-46e3-98ba-98f9f0434964/resourceGroups/8pmbatch-RG/providers/Microsoft.Network/networkInterfaces/myNIC1-1",
            "internal_domain_name_suffix": "4t3habwrtitejjh10rwysz5kfh.ix.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "myNIC-1-config",
                "primary": true,
                "private_ip_address": "10.0.1.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/491e1121-c626-46e3-98ba-98f9f0434964/resourceGroups/8pmbatch-RG/providers/Microsoft.Network/publicIPAddresses/1-pip",
                "subnet_id": "/subscriptions/491e1121-c626-46e3-98ba-98f9f0434964/resourceGroups/8pmbatch-RG/providers/Microsoft.Network/virtualNetworks/myVnet/subnets/mySubnet"
              }
            ],
            "location": "southeastasia",
            "name": "myNIC1-1",
            "private_ip_address": "10.0.1.5",
            "private_ip_addresses": [
              "10.0.1.5"
            ],
            "resource_group_name": "8pmbatch-RG"
          },
          "dependencies": [
            "azurerm_public_ip.pip",
            "azurerm_subnet.example",
            "azurerm_virtual_network.example",
            "data.azurerm_resource_group.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/491e1121-c626-46e3-98ba-98f9f0434964/resourceGroups/8pmbatch-RG/providers/Microsoft.Network/networkInterfaces/myNIC1-0|/subscriptions/491e1121-c626-46e3-98ba-98f9f0434964/resourceGroups/8pmbatch-RG/providers/Microsoft.Network/networkSecurityGroups/myNSG",
            "network_interface_id": "/subscriptions/491e1121-c626-46e3-98ba-98f9f0434964/resourceGroups/8pmbatch-RG/providers/Microsoft.Network/networkInterfaces/myNIC1-0",
            "network_security_group_id": "/subscriptions/491e1121-c626-46e3-98ba-98f9f0434964/resourceGroups/8pmbatch-RG/providers/Microsoft.Network/networkSecurityGroups/myNSG"
          },
          "dependencies": [
            "azurerm_network_interface.example",
            "azurerm_network_security_group.example",
            "azurerm_public_ip.pip",
            "azurerm_subnet.example",
            "azurerm_virtual_network.example",
            "data.azurerm_resource_group.example"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/491e1121-c626-46e3-98ba-98f9f0434964/resourceGroups/8pmbatch-RG/providers/Microsoft.Network/networkInterfaces/myNIC1-1|/subscriptions/491e1121-c626-46e3-98ba-98f9f0434964/resourceGroups/8pmbatch-RG/providers/Microsoft.Network/networkSecurityGroups/myNSG",
            "network_interface_id": "/subscriptions/491e1121-c626-46e3-98ba-98f9f0434964/resourceGroups/8pmbatch-RG/providers/Microsoft.Network/networkInterfaces/myNIC1-1",
            "network_security_group_id": "/subscriptions/491e1121-c626-46e3-98ba-98f9f0434964/resourceGroups/8pmbatch-RG/providers/Microsoft.Network/networkSecurityGroups/myNSG"
          },
          "dependencies": [
            "azurerm_network_interface.example",
            "azurerm_network_security_group.example",
            "azurerm_public_ip.pip",
            "azurerm_subnet.example",
            "azurerm_virtual_network.example",
            "data.azurerm_resource_group.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/491e1121-c626-46e3-98ba-98f9f0434964/resourceGroups/8pmbatch-RG/providers/Microsoft.Network/networkSecurityGroups/myNSG",
            "location": "southeastasia",
            "name": "myNSG",
            "resource_group_name": "8pmbatch-RG",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.azurerm_resource_group.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/491e1121-c626-46e3-98ba-98f9f0434964/resourceGroups/8pmbatch-RG/providers/Microsoft.Network/networkSecurityGroups/myNSG/securityRules/port-22",
            "name": "port-22",
            "network_security_group_name": "myNSG",
            "priority": 1001,
            "protocol": "Tcp",
            "resource_group_name": "8pmbatch-RG",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.example",
            "data.azurerm_resource_group.example"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "80",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/491e1121-c626-46e3-98ba-98f9f0434964/resourceGroups/8pmbatch-RG/providers/Microsoft.Network/networkSecurityGroups/myNSG/securityRules/port-80",
            "name": "port-80",
            "network_security_group_name": "myNSG",
            "priority": 1002,
            "protocol": "Tcp",
            "resource_group_name": "8pmbatch-RG",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.example",
            "data.azurerm_resource_group.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/491e1121-c626-46e3-98ba-98f9f0434964/resourceGroups/8pmbatch-RG/providers/Microsoft.Network/publicIPAddresses/0-pip",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "southeastasia",
            "name": "0-pip",
            "resource_group_name": "8pmbatch-RG",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "data.azurerm_resource_group.example"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/491e1121-c626-46e3-98ba-98f9f0434964/resourceGroups/8pmbatch-RG/providers/Microsoft.Network/publicIPAddresses/1-pip",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "southeastasia",
            "name": "1-pip",
            "resource_group_name": "8pmbatch-RG",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "data.azurerm_resource_group.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/491e1121-c626-46e3-98ba-98f9f0434964/resourceGroups/8pmbatch-RG/providers/Microsoft.Network/virtualNetworks/myVnet/subnets/mySubnet",
            "name": "mySubnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "8pmbatch-RG",
            "virtual_network_name": "myVnet"
          },
          "dependencies": [
            "azurerm_virtual_network.example",
            "data.azurerm_resource_group.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "0670faf4-9ad1-4426-a4fb-d46d8967ea2f",
            "id": "/subscriptions/491e1121-c626-46e3-98ba-98f9f0434964/resourceGroups/8pmbatch-RG/providers/Microsoft.Network/virtualNetworks/myVnet",
            "location": "southeastasia",
            "name": "myVnet",
            "resource_group_name": "8pmbatch-RG"
          },
          "dependencies": [
            "data.azurerm_resource_group.example"
          ]
        }
      ]
    }
  ]
}